# recommendation-products

./: README.md  pyproject.toml  requirements.txt
data/: README.md
notebook/: main.ipynb
