[project]
name = "recommendation-products"
version = "0.1.0"
description = "Tugas Analisa Sistem Rekomendasi Collaborative Filtering (SVD vs KNN)"
authors = [{ name = "Apri Pandu Wicaksono", email = "apripandu@student.telkomuniversity.ac.id" }]
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "cython>=3.2.4",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy<2",
    "pandas>2",
    "scikit-learn>=1.8.0",
    "scikit-surprise>=1.1.4",
    "seaborn>=0.13.2",
]
